# SmartHome

./: BottomBarButton.qml  CMakeLists.txt  ClickableImage.qml  FavouriteRoomsButton.qml  FrequentlyUsedButton.qml  Main.qml  QuickActionButton.qml  README.md  main.cpp
